--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -239,6 +239,7 @@
     position: absolute;
     left: 0;
     top: 10%;
+    width: 100%;
     @include respond(phone) {
       width: 100vw;
     }
